--- a/Test/Test.Neon.Common.net/packages.config
+++ b/Test/Test.Neon.Common.net/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="coverlet.collector" version="1.3.0" targetFramework="net48" developmentDependency="true" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration" version="3.1.6" targetFramework="net48" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.6" targetFramework="net48" />
