--- a/Test/Test.Neon.Couchbase/Test.Neon.Couchbase.csproj
+++ b/Test/Test.Neon.Couchbase/Test.Neon.Couchbase.csproj
@@ -32,6 +32,10 @@
   <ItemGroup>
     <FrameworkReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="CouchbaseNetClient" Version="2.7.18" />
+    <PackageReference Include="coverlet.collector" Version="1.3.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Linq2Couchbase" Version="1.4.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.6.1" />
     <PackageReference Include="xunit" Version="2.4.1" />
