--- a/Test/Test.Neon.Temporal.net/packages.config
+++ b/Test/Test.Neon.Temporal.net/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="coverlet.collector" version="1.3.0" targetFramework="net48" developmentDependency="true" />
   <package id="Humanizer.Core" version="2.8.26" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net48" />
   <package id="Microsoft.CodeAnalysis" version="3.6.0" targetFramework="net48" />
