--- a/Charts/fluent-bit/values.yaml
+++ b/Charts/fluent-bit/values.yaml
@@ -33,9 +33,9 @@ metrics:
   serviceMonitor:
     enabled: true
     additionalLabels: {}
-    # namespace: monitoring
-    # interval: 30s
-    # scrapeTimeout: 10s
+    namespace: monitoring
+    interval: 30s
+    scrapeTimeout: 10s
 
 # When enabled, fluent-bit will keep track of tailing offsets across pod restarts.
 trackOffsets: false
