--- a/Lib/Neon.Kube.Aws/Neon.Kube.Aws.csproj
+++ b/Lib/Neon.Kube.Aws/Neon.Kube.Aws.csproj
@@ -60,8 +60,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.Core" Version="3.5.1.5" />
-    <PackageReference Include="AWSSDK.EC2" Version="3.5.3.1" />
+    <PackageReference Include="AWSSDK.Core" Version="3.5.1.7" />
+    <PackageReference Include="AWSSDK.EC2" Version="3.5.4.1" />
+    <PackageReference Include="AWSSDK.ElasticLoadBalancingV2" Version="3.5.0.9" />
+    <PackageReference Include="AWSSDK.ResourceGroups" Version="3.5.0.9" />
   </ItemGroup>
 
 </Project>
