--- a/Images/neon-log-host/conf/fluent-bit-filter.conf
+++ b/Images/neon-log-host/conf/fluent-bit-filter.conf
@@ -2,7 +2,7 @@
     Name                kubernetes
     Match               kube.*
     Kube_Tag_Prefix     kube.var.log.containers.
-    Kube_URL            https://kubernetes.default.svc:443
+    Kube_URL            https://kubernetes.default.svc.cluster.local:443
     Kube_CA_File        /var/run/secrets/kubernetes.io/serviceaccount/ca.crt
     Kube_Token_File     /var/run/secrets/kubernetes.io/serviceaccount/token
     K8S-Logging.Parser  On
