--- a/Lib/Neon.Kube.Aws/Neon.Kube.Aws.csproj
+++ b/Lib/Neon.Kube.Aws/Neon.Kube.Aws.csproj
@@ -60,10 +60,10 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="AWSSDK.Core" Version="3.5.1.9" />
-    <PackageReference Include="AWSSDK.EC2" Version="3.5.4.3" />
-    <PackageReference Include="AWSSDK.ElasticLoadBalancingV2" Version="3.5.1.2" />
-    <PackageReference Include="AWSSDK.ResourceGroups" Version="3.5.0.11" />
+    <PackageReference Include="AWSSDK.Core" Version="3.5.1.10" />
+    <PackageReference Include="AWSSDK.EC2" Version="3.5.4.4" />
+    <PackageReference Include="AWSSDK.ElasticLoadBalancing" Version="3.5.0.12" />
+    <PackageReference Include="AWSSDK.ResourceGroups" Version="3.5.0.12" />
   </ItemGroup>
 
 </Project>
