--- a/Services/neon-cluster-manager/neon-cluster-manager.csproj
+++ b/Services/neon-cluster-manager/neon-cluster-manager.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <RootNamespace>ClusterManager</RootNamespace>
+    <RootNamespace>NeonClusterManager</RootNamespace>
     <LangVersion>latest</LangVersion>
     <ServerGarbageCollection>true</ServerGarbageCollection>
     <ConcurrentGarbageCollection>true</ConcurrentGarbageCollection>
-    <AssemblyName>cluster-manager</AssemblyName>
+    <AssemblyName>neon-cluster-manager</AssemblyName>
     <Configurations>Debug;Release;CodeDoc</Configurations>
   </PropertyGroup>
 
