--- a/Lib/Neon.ModelGenerator/Neon.ModelGenerator.csproj
+++ b/Lib/Neon.ModelGenerator/Neon.ModelGenerator.csproj
@@ -85,9 +85,9 @@
   -->
 
   <Target Name="ModelGen" BeforeTargets="BeforeBuild">
-    <Exec Command="neon-build dotnet publish &quot;%NF_ROOT%\Tools\neon-modelgen\neon-modelgen.csproj&quot; --framework netcoreapp3.1 --output &quot;%NF_ROOT%\Lib\Neon.ModelGenerator\linux-x64&quot; --configuration Release --runtime linux-x64" />
-    <Exec Command="neon-build dotnet publish &quot;%NF_ROOT%\Tools\neon-modelgen\neon-modelgen.csproj&quot; --framework netcoreapp3.1 --output &quot;%NF_ROOT%\Lib\Neon.ModelGenerator\osx-x64&quot; --configuration Release --runtime osx-x64" />
-    <Exec Command="neon-build dotnet publish &quot;%NF_ROOT%\Tools\neon-modelgen\neon-modelgen.csproj&quot; --framework netcoreapp3.1 --output &quot;%NF_ROOT%\Lib\Neon.ModelGenerator\win-x64&quot; --configuration Release --runtime win-x64" />
+    <Exec Command="neon-build dotnet publish &quot;%NF_ROOT%\Tools\neon-modelgen\neon-modelgen.csproj&quot; --framework netcoreapp3.1 --output &quot;%NF_ROOT%\Lib\Neon.ModelGenerator\linux-x64&quot; --configuration $(configuration) --runtime linux-x64" />
+    <Exec Command="neon-build dotnet publish &quot;%NF_ROOT%\Tools\neon-modelgen\neon-modelgen.csproj&quot; --framework netcoreapp3.1 --output &quot;%NF_ROOT%\Lib\Neon.ModelGenerator\osx-x64&quot; --configuration $(configuration) --runtime osx-x64" />
+    <Exec Command="neon-build dotnet publish &quot;%NF_ROOT%\Tools\neon-modelgen\neon-modelgen.csproj&quot; --framework netcoreapp3.1 --output &quot;%NF_ROOT%\Lib\Neon.ModelGenerator\win-x64&quot; --configuration $(configuration) --runtime win-x64" />
   </Target>
 
 </Project>
