--- a/Lib/Neon.Kube.Models/Neon.Kube.Models.csproj
+++ b/Lib/Neon.Kube.Models/Neon.Kube.Models.csproj
@@ -8,7 +8,7 @@
     <Version>2.10.0-preview</Version>
     <Company>neonFORGE LLC</Company>
     <Product>neonKUBE</Product>
-    <Description>[Internal use only]: neonKUBE related data mmodels.</Description>
+    <Description>[Internal use only]: neonKUBE related data models.</Description>
     <PackageReleaseNotes>https://github.com/nforgeio/neonKUBE/releases</PackageReleaseNotes>
     <Copyright>Copyright © 2005-2021 by neonFORGE LLC.  All rights reserved.</Copyright>
     <AssemblyVersion>0.0.0.0</AssemblyVersion>
@@ -23,7 +23,7 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <Configurations>Debug;Release;CodeDoc</Configurations>
     <PackageIcon>nuget-icon.png</PackageIcon>
-    <PackageTags>kubernetes</PackageTags>
+    <PackageTags></PackageTags>
     <NoDefaultExcludes>true</NoDefaultExcludes>
     <PackageIconUrl />
   </PropertyGroup>
