--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,4 @@ Go/**/__debug_bin
 /Lib/Neon.ModelGenerator/linux-x64/**
 /Lib/Neon.ModelGenerator/osx-x64/**
 /Lib/Neon.ModelGenerator/win-x64/**
+/Lib/**/*.bak
