--- a/Lib/Neon.Cadence/Neon.Cadence.csproj
+++ b/Lib/Neon.Cadence/Neon.Cadence.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFrameworks>net5.0; netcoreapp3.1; netstandard2.0; net48</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <OutputType>Library</OutputType>
     <RootNamespace>Neon.Cadence</RootNamespace>
     <Version>2.14.0</Version>
@@ -76,6 +76,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Basic.Reference.Assemblies" Version="1.2.4" />
     <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" Condition="'$(TargetFrameworkVersion)'!='v4.8'" />
     <PackageReference Include="Microsoft.AspNetCore.Server.Kestrel" Version="2.2.0" Condition="'$(TargetFrameworkVersion)'!='v4.8'" />
     <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="3.10.0" />
