--- a/Lib/Neon.Cryptography/Neon.Cryptography.csproj
+++ b/Lib/Neon.Cryptography/Neon.Cryptography.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net5.0; netcoreapp3.1; netstandard2.0; net48</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0</TargetFrameworks>
     <OutputType>Library</OutputType>
     <RootNamespace>Neon.Cryptography</RootNamespace>
     <Version>2.14.0</Version>
