--- a/Lib/Neon.Kube.Xunit/Neon.Kube.Xunit.csproj
+++ b/Lib/Neon.Kube.Xunit/Neon.Kube.Xunit.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.1; net5.0</TargetFrameworks>
+    <TargetFrameworks>netstandard2.1</TargetFrameworks>
     <OutputType>Library</OutputType>
     <RootNamespace>Neon.Kube.Xunit</RootNamespace>
     <PackageId>Neon.Kube.Xunit</PackageId>
