--- a/Lib/Neon.Kube/Resources/Helm/harbor/templates/certificate.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/harbor/templates/certificate.yaml
@@ -18,7 +18,7 @@ spec:
 apiVersion: cert-manager.io/v1alpha2
 kind: Certificate
 metadata:
-  name: {{ .Values.clusterDomain }}
+  name: registry-harbor
   namespace: neon-system
 spec:
   commonName: {{ .Values.clusterDomain }}
