--- a/Lib/Neon.Kube/Resources/Helm/neon-acme/templates/certificate-cluster.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/neon-acme/templates/certificate-cluster.yaml
@@ -1,7 +1,7 @@
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
-  name: {{ .Values.clusterDomain }}
+  name: neon-cluster-certificate
   namespace: neon-ingress
 spec:
   commonName: {{ .Values.clusterDomain }}
@@ -18,9 +18,10 @@ spec:
   keySize: 2048
   organization:
     - neoncluster.io
-  privateKey: {}
+  privateKey:
+    rotationPolicy: Always
   renewBefore: 360h0m0s
-  secretName: {{ .Values.clusterDomain }}
+  secretName: neon-cluster-certificate
   subject: {}
   usages:
     - server auth
