--- a/Lib/Neon.Kube/Resources/Helm/neon-acme/templates/gateway-cluster.yaml
+++ b/Lib/Neon.Kube/Resources/Helm/neon-acme/templates/gateway-cluster.yaml
@@ -24,5 +24,5 @@ spec:
         number: 8443
         protocol: HTTPS
       tls:
-        credentialName: "{{ .Values.clusterDomain }}"
+        credentialName: neon-cluster-certificate
         mode: SIMPLE
